--- a/index.html
+++ b/index.html
@@ -5,21 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!--Material Icons-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+  <!-- https://fonts.google.com/icons?selected=Material+Icons&icon.query=location -->
   <body>
-      <nav>
-          <button class="btn-browser">
-              Search for places
-          </button>
+    <div class="today__weather">
+      <div class="container">
+        <nav class="nav">
+          <button class="btn-browser">Search for places</button>
           <button class="btn-location">
-            <span class="material-icons white">
-                gps_fixed
-                </span>
+            <span class="material-icons white">gps_fixed</span>
           </button>
-      </nav>
+        </nav>
+        <div class="weather__info">
+            <img
+              class="bk__cloud--img"
+              src="img/Cloud-background.png"
+              alt="four clouds background"
+            />
+            <img
+              class="actual__weather--img"
+              src="img/Shower.png"
+              alt="Heavy Clouds"
+            />
+
+          <div class="weather__data">
+            <div class="weather__number">
+               <p>15<span class="degrees">°C</span></p> 
+            </div>
+            <h3 class="actual__forecast">Cloudy</h3>
+            <div class="date">
+              <p>Today</p>
+              <!--Use maybe pseudo elements--> <p>|</p>
+              <p>Fri, 5 April</p>
+            </div>
+            <div class="location">
+              <span class="material-icons">location_on</span>
+              <p>Helsinki</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
