--- a/index.html
+++ b/index.html
@@ -67,14 +67,57 @@
       <!-- -------------------FORECAST WEATHER------------------- -->
       <div class="forecast__weather">
         <div class="container">
-          <div class="card">
-            <p>Tommorrow</p>
-            <img src="../img/Snow.png" alt="tomorrow weather img">
-            <span class="degrees__forecast">
-              <p>16<span class="degrees">°C</span></p>
-              <p>11<span class="degrees">°C</span></p>
-            </span>
+          <div class="d-flex__card">
+            <div class="card">
+              <p class="card__title">Tommorrow</p>
+              <img src="../img/Clear.png" alt="tomorrow weather img">
+              <span class="degrees__forecast">
+                <p class="max__degree">16<span class="degrees">°C</span></p>
+                <p class="min__degree">11<span class="degrees">°C</span></p>
+              </span>
+            </div>
+  
+            <div class="card">
+              <p class="card__title">Sun, 7 May</p>
+              <img src="../img/Clear.png" alt="tomorrow weather img">
+              <span class="degrees__forecast">
+                <p class="max__degree">16<span class="degrees">°C</span></p>
+                <p class="min__degree">11<span class="degrees">°C</span></p>
+              </span>
+            </div>
           </div>
+
+          <div class="d-flex__card">
+            <div class="card">
+              <p class="card__title">Mon, 8 May</p>
+              <img src="../img/Hail.png" alt="tomorrow weather img">
+              <span class="degrees__forecast">
+                <p class="max__degree">16<span class="degrees">°C</span></p>
+                <p class="min__degree">11<span class="degrees">°C</span></p>
+              </span>
+            </div>
+  
+            <div class="card">
+              <p class="card__title">Tue, 9 May</p>
+              <img src="../img/Sleet.png" alt="tomorrow weather img">
+              <span class="degrees__forecast">
+                <p class="max__degree">16<span class="degrees">°C</span></p>
+                <p class="min__degree">11<span class="degrees">°C</span></p>
+              </span>
+            </div>
+          </div>
+
+          <div class="d-flex__card">
+            <div class="card">
+              <p class="card__title">Wed, 10 May</p>
+              <img src="../img/LightCloud.png" alt="tomorrow weather img">
+              <span class="degrees__forecast">
+                <p class="max__degree">16<span class="degrees">°C</span></p>
+                <p class="min__degree">11<span class="degrees">°C</span></p>
+              </span>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
