--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="d-flex__card">
             <div class="card">
               <p class="card__title">Tommorrow</p>
-              <img src="../img/Clear.png" alt="tomorrow weather img">
+              <img src="./img/Clear.png" alt="tomorrow weather img">
               <span class="degrees__forecast">
                 <p class="max__degree">16<span class="degrees">°C</span></p>
                 <p class="min__degree">11<span class="degrees">°C</span></p>
@@ -79,7 +79,7 @@
   
             <div class="card">
               <p class="card__title">Sun, 7 May</p>
-              <img src="../img/Clear.png" alt="tomorrow weather img">
+              <img src="img/Clear.png" alt="tomorrow weather img">
               <span class="degrees__forecast">
                 <p class="max__degree">16<span class="degrees">°C</span></p>
                 <p class="min__degree">11<span class="degrees">°C</span></p>
@@ -90,7 +90,7 @@
           <div class="d-flex__card">
             <div class="card">
               <p class="card__title">Mon, 8 May</p>
-              <img src="../img/Hail.png" alt="tomorrow weather img">
+              <img src="img/Hail.png" alt="tomorrow weather img">
               <span class="degrees__forecast">
                 <p class="max__degree">16<span class="degrees">°C</span></p>
                 <p class="min__degree">11<span class="degrees">°C</span></p>
@@ -99,7 +99,7 @@
   
             <div class="card">
               <p class="card__title">Tue, 9 May</p>
-              <img src="../img/Sleet.png" alt="tomorrow weather img">
+              <img src="img/Sleet.png" alt="tomorrow weather img">
               <span class="degrees__forecast">
                 <p class="max__degree">16<span class="degrees">°C</span></p>
                 <p class="min__degree">11<span class="degrees">°C</span></p>
@@ -110,7 +110,7 @@
           <div class="d-flex__card">
             <div class="card">
               <p class="card__title">Wed, 10 May</p>
-              <img src="../img/LightCloud.png" alt="tomorrow weather img">
+              <img src="img/LightCloud.png" alt="tomorrow weather img">
               <span class="degrees__forecast">
                 <p class="max__degree">16<span class="degrees">°C</span></p>
                 <p class="min__degree">11<span class="degrees">°C</span></p>
