Add: Mobile responsive

--- a/index.html
+++ b/index.html
@@ -118,8 +118,72 @@
             </div>
           </div>
 
+          <!-- -------------------TODAY HIGHLIGHTS------------------- -->
+
+
+          <div class="d-flex__card ">
+            <div class="card__highlight">
+              <p class="card__title highlight__info">Wind status</p>
+              <div class="weather__number">
+                <p>7<span class="sub__text">mph</span></p>
+              </div>
+              <span class="highlight__bottom">
+                <span class="icon__location material-icons white">near_me</span>
+                <p class="highlight__info">WSW</p>
+              </span>
+            </div>
+          </div>
+
+          <div class="d-flex__card ">
+            <div class="card__highlight">
+              <p class="card__title highlight__info">Humidity</p>
+              <div class="weather__number">
+                <p>84<span class="sub__text">%</span></p>
+              </div>
+              <div class="humility__info">
+                <div class="container">
+                  <div class="humility__number">
+                    <p>0</p>
+                    <p>50</p>
+                    <p>100</p>
+                  </div>
+                  <div class="humility__bar">
+                    <span class="foreground">-</span>
+                  </div>
+                  <div class="humility__percentage">
+                    <p>%</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex__card ">
+            <div class="card__highlight">
+              <p class="card__title highlight__info">Visibility</p>
+              <div class="weather__number">
+                <p>6,4<span class="sub__text">miles</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex__card ">
+            <div class="card__highlight">
+              <p class="card__title highlight__info">Air Pressure</p>
+              <div class="weather__number">
+                <p>998<span class="sub__text">mb</span></p>
+              </div>
+            </div>
+          </div>
+
+          
+
         </div>
       </div>
+
+
+      
+
     </div>
   </body>
 </html>
