Hotfix: Mobile responsive

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
           </div>
 
-          <div class="d-flex__card ">
+          <div class="d-flex__card last__card">
             <div class="card__highlight">
               <p class="card__title highlight__info">Air Pressure</p>
               <div class="weather__number">
@@ -175,13 +175,14 @@
               </div>
             </div>
           </div>
-
-          
-
         </div>
       </div>
 
-
+      <footer >
+        <div class="footer">
+          <p>created by <a href="https://github.com/AlanSeyfir">AlanSeyfir</a> - devChallenges.io</p>
+        </div>
+      </footer>
       
 
     </div>
